[gd_scene load_steps=3 format=3 uid="uid://c3jyr7gqeohxd"]

[ext_resource type="Script" uid="uid://qxnfycfohpo0" path="res://scenes/card.gd" id="1_yiag5"]

[sub_resource type="CanvasTexture" id="CanvasTexture_yiag5"]

[node name="Card" type="ColorRect"]
clip_contents = true
offset_left = 445.0
offset_top = 500.0
offset_right = 565.0
offset_bottom = 660.0
script = ExtResource("1_yiag5")

[node name="RarityBorder" type="Panel" parent="."]
layout_mode = 0
offset_right = 120.0
offset_bottom = 160.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 116.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 12.0
offset_right = 110.0
offset_bottom = 89.0
texture = SubResource("CanvasTexture_yiag5")

[node name="CostLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 111.0
offset_top = 2.0
offset_right = 119.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7

[node name="DescBG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 98.0
offset_right = 106.0
offset_bottom = 151.0

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 100.0
offset_right = 105.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 5

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 113.0
offset_right = 105.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 5
